--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.5.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.3.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
